@@ -18,7 +18,7 @@ import static com.google.devtools.build.lib.syntax.compiler.ByteCodeUtils.append
 import com.google.common.base.Strings;
 import com.google.common.collect.Iterables;
 import com.google.devtools.build.lib.events.Location;
-import com.google.devtools.build.lib.syntax.ClassObject.SkylarkClassObject;
+import com.google.devtools.build.lib.syntax.Concatable.Concatter;
 import com.google.devtools.build.lib.syntax.SkylarkList.MutableList;
 import com.google.devtools.build.lib.syntax.SkylarkList.Tuple;
 import com.google.devtools.build.lib.syntax.compiler.ByteCodeMethodCalls;
@@ -29,17 +29,15 @@ import com.google.devtools.build.lib.syntax.compiler.Jump;
 import com.google.devtools.build.lib.syntax.compiler.Jump.PrimitiveComparison;
 import com.google.devtools.build.lib.syntax.compiler.LabelAdder;
 import com.google.devtools.build.lib.syntax.compiler.VariableScope;
-
-import net.bytebuddy.implementation.bytecode.ByteCodeAppender;
-import net.bytebuddy.implementation.bytecode.Duplication;
-import net.bytebuddy.implementation.bytecode.Removal;
-import net.bytebuddy.implementation.bytecode.StackManipulation;
-
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.EnumSet;
 import java.util.IllegalFormatException;
 import java.util.List;
+import net.bytebuddy.implementation.bytecode.ByteCodeAppender;
+import net.bytebuddy.implementation.bytecode.Duplication;
+import net.bytebuddy.implementation.bytecode.Removal;
+import net.bytebuddy.implementation.bytecode.StackManipulation;
 
 /**
  * Syntax node for a binary operator expression.
@@ -97,17 +95,8 @@ public final class BinaryOperatorExpression extends Expression {
    * <p>Publicly accessible for reflection and compiled Skylark code.
    */
   public static boolean in(Object lval, Object rval, Location location) throws EvalException {
-    if (rval instanceof SkylarkList) {
-      for (Object obj : (SkylarkList) rval) {
-        if (obj.equals(lval)) {
-          return true;
-        }
-      }
-      return false;
-    } else if (rval instanceof SkylarkDict) {
-      return ((SkylarkDict<?, ?>) rval).containsKey(lval);
-    } else if (rval instanceof SkylarkNestedSet) {
-      return ((SkylarkNestedSet) rval).expandedSet().contains(lval);
+    if (rval instanceof SkylarkQueryable) {
+      return ((SkylarkQueryable) rval).containsKey(lval, location);
     } else if (rval instanceof String) {
       if (lval instanceof String) {
         return ((String) rval).contains((String) lval);
@@ -279,6 +268,7 @@ public final class BinaryOperatorExpression extends Expression {
 
   /**
    * Compile a comparison oer
+   *
    * @param debugAccessors
    * @param code
    * @param leftCompiled
@@ -289,8 +279,7 @@ public final class BinaryOperatorExpression extends Expression {
       AstAccessors debugAccessors,
       List<ByteCodeAppender> code,
       ByteCodeAppender leftCompiled,
-      ByteCodeAppender rightCompiled)
-      throws Error {
+      ByteCodeAppender rightCompiled) {
     PrimitiveComparison byteCodeOperator = PrimitiveComparison.forOperator(operator);
     code.add(leftCompiled);
     code.add(rightCompiled);
@@ -338,9 +327,15 @@ public final class BinaryOperatorExpression extends Expression {
       return SkylarkDict.plus((SkylarkDict<?, ?>) lval, (SkylarkDict<?, ?>) rval, env);
     }
 
-    if (lval instanceof SkylarkClassObject && rval instanceof SkylarkClassObject) {
-      return SkylarkClassObject.concat(
-          (SkylarkClassObject) lval, (SkylarkClassObject) rval, location);
+    if (lval instanceof Concatable && rval instanceof Concatable) {
+      Concatable lobj = (Concatable) lval;
+      Concatable robj = (Concatable) rval;
+      Concatter concatter = lobj.getConcatter();
+      if (concatter != null && concatter.equals(robj.getConcatter())) {
+        return concatter.concat(lobj, robj, location);
+      } else {
+        throw typeException(lval, rval, Operator.PLUS, location);
+      }
     }
 
     // TODO(bazel-team): Remove this case. Union of sets should use '|' instead of '+'.
@@ -413,7 +408,7 @@ public final class BinaryOperatorExpression extends Expression {
       // Java:   -7/3 = -2
       // Python: -7/3 = -3
       // We want to follow Python semantics, so we use float division and round down.
-      return (int) Math.floor(new Double((Integer) lval) / (Integer) rval);
+      return (int) Math.floor(Double.valueOf((Integer) lval) / (Integer) rval);
     }
     throw typeException(lval, rval, Operator.DIVIDE, location);
   }
